sql/test/error/error2_1.exp


update t1 set a = 1 where a = 0.0;
                ^
                |
                 ----- ERROR
Error: line 3, characters 17-17:
Incompatible types for set
